# fried

./: .gitignore  CLAUDE.md  README.md
.agents/: AGENTS.md
antigravity/: summary.md
assets/: README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/adapters/: __init__.py  email.py  image_storage.py  kms.py  livekit.py  llm.py  notifications.py  payments.py
backend/app/core/: config.py  errors.py  logging.py  security.py  supabase.py
backend/app/routers/: admin.py  ai.py  handoff.py  health.py  live.py  me.py  media.py  onboarding.py  payments.py  safety.py  scheduling.py  therapist.py
backend/app/schemas/: __init__.py  admin.py  handoff.py  live.py  me.py  onboarding.py  payments.py  scheduling.py  therapist.py
backend/app/services/: __init__.py  audit.py  onboarding.py  profiles.py
backend/app/services/agents/: __init__.py  handoff.py  memory.py  scheduler.py
backend/app/services/crypto/: __init__.py  migration.py  service.py
backend/app/services/payments/: pricing.py
backend/app/services/safety/: __init__.py  resources.py  service.py
backend/tests/: test_admin.py  test_ai_chat.py  test_country_gate.py  test_crypto.py  test_handoff.py  test_live_sessions.py  test_payments.py  test_safety.py  test_scheduling.py  test_therapist.py
deploy/: Caddyfile  deploy.sh  docker-compose.yml  livekit.yaml  vps-setup.sh
docs/: agentic-system.md  api-contract.md  architecture.md  build-sequence.md  data-model.md  design-system.md  integrations.md  safety-and-privacy.md
frontend/: .env.example  (+6 more)
(+113 files in other folders)
